<resources>
    <string name="app_name">TotoRan</string>

    <!-- メイン画面-->
    <string name="single_button">シングル</string>
    <string name="multi_button">マルチ</string>
    <string name="odds_confirm">支持率確認</string>
    <string name="data_get">データ再取得</string>
    <string name="logo">LOGO</string>
    <string name="line_break">\n</string>


    <!-- 選択画面の「DRAW」 -->
    <string name="draw_str">DRAW</string>
    <string name="choice_multi">マルチ選択</string>
    <string name="choice_single">シングル選択</string>


    <!-- シングル条件指定画面 -->
    <string name="hda_title">■「ホーム、ドロー、アウェイ」の数</string>
    <string name="home_title">　・「ホーム」の数　</string>
    <string name="draw_title">　・「ドロー」の数　</string>
    <string name="away_title">　・「アウェイ」の数</string>
    <string name="unit_title">■口数(最大１０口)</string>
    <string name="ijou_str">以上</string>
    <string name="unit_str">口</string>
    <string name="detail_single">シングル条件指定</string>

    <!-- マルチ条件指定画面 -->
    <string name="dt_title">■「ダブル、トリプル」の数</string>
    <string name="double_title">・「ダブル」の数　</string>
    <string name="triple_title">・「トリプル」の数</string>
    <string name="detail_multi">マルチ条件指定</string>


    <!-- シングル結果画面 -->
    <string name="copy_str">コピー</string>
    <string name="result_single">シングル結果</string>

    <!-- マルチ結果画面 -->
    <string name="puchi_str">プチ削減</string>
    <string name="hantei_str">判定表示</string>
    <string name="result_multi">マルチ結果</string>

    <!-- 選択画面共通 -->
    <string name="clear_str">CLEAR</string>

    <!-- 「次へ」ボタンと「戻る」ボタン -->
    <string name="next_str">次へ</string>
    <string name="back_str">戻る</string>

    <!-- プチ削減画面 -->
    <string name="all_tap">全選択</string>
    <string name="home_checkbox_title_str">◆ホーム(1)の数で絞る</string>
    <string name="draw_checkbox_title_str">◆ドロー(0)の数で絞る</string>
    <string name="away_checkbox_title_str">◆アウェイ(2)の数で絞る</string>
    <string name="upper_checkbox_title_str">◆大文字判定で絞る(toto)</string>
    <string name="lower_checkbox_title_str">◆小文字判定で絞る(book)</string>

    <!-- ドローの数 -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <!--<string name="ten">10</string>-->
    <!--<string name="eleven">11</string>-->
    <!--<string name="twelve">12</string>-->
    <!--<string name="thirteen">13</string>-->

    <!-- 判定大文字 -->
    <string name="upper_s">S</string>
    <string name="upper_a">A</string>
    <string name="upper_b">B</string>
    <string name="upper_c">C</string>
    <string name="upper_d">D</string>
    <string name="upper_e">E</string>
    <string name="upper_f">F</string>

    <!-- 判定小文字 -->
    <string name="lower_s">s</string>
    <string name="lower_a">a</string>
    <string name="lower_b">b</string>
    <string name="lower_c">c</string>
    <string name="lower_d">d</string>
    <string name="lower_e">e</string>
    <string name="lower_f">f</string>

    <!-- 支持率確認画面 -->
    <string name="rate_confirm">支持率確認</string>
    <string name="vs_text">vs</string>
    <string name="rate_toto">支持率(toto)</string>
    <string name="rate_book">支持率(book)</string>


</resources>
