<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFF00"
    android:orientation="vertical"
    android:gravity="top|left"
    tools:context="raksam.com.totoran.SingleDetailActivity">


    <!-- 画面タイトル -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:textColor="@drawable/button_text_color_blue"
        android:textSize="30sp"
        android:text="シングル条件指定"/>
    <!-- 中抜き文字装飾できねえかな？？？？？？？？？？？？-->

    <!-- 「ホーム、ドロー、アウェイ」の数　　：タイトル -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hda_title"
        android:textSize="18sp"/>

    <!-- ホームの数 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/home_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/home_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ijou_str"
            android:textSize="15sp" />

    </LinearLayout>

    <!-- ドローの数 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/draw_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/draw_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ijou_str"
            android:textSize="15sp" />

    </LinearLayout>

    <!-- アウェイの数 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/away_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/away_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ijou_str"
            android:textSize="15sp" />

    </LinearLayout>


    <!-- 口数　　：タイトル -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_title"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/unit_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="1"
            android:textSize="15sp"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_str"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>
