<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="raksam.com.totoran.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/totoranlogo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_shape_nomal"
        android:textColor="@drawable/button_text_color_nomal"
        android:textSize="20sp"
        android:text="@string/single_button"
        android:onClick="singleChoiceTransition"
        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_shape_nomal"
        android:textColor="@drawable/button_text_color_nomal"
        android:textSize="20sp"
        android:text="@string/multi_button"
        android:onClick="multiChoiceTransition"
        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_shape_blue"
        android:textColor="@drawable/button_text_color_blue"
        android:textSize="20sp"
        android:text="@string/odds_confirm"
        android:onClick="oddsConfirm"
        android:layout_weight="1"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_shape_red"
        android:textColor="@drawable/button_text_color_red"
        android:textSize="20sp"
        android:text="@string/data_get"
        android:onClick="dataReGetAll"
        android:layout_weight="1"/>


    <TextView
        android:id="@+id/deadline"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="\n"
        android:layout_weight="2"/>

</LinearLayout>
