<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFF00"
    android:orientation="vertical"
    android:gravity="top|left"
    tools:context="raksam.com.totoran.MultiDetailActivity">

    <!-- 画面タイトル -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:textColor="@drawable/button_text_color_red"
        android:textSize="30sp"
        android:text="マルチ条件指定"/>
    <!-- 中抜き文字装飾できねえかな？？？？？？？？？？？？-->

    <!-- 「ダブル、トリプル」の数　　：タイトル -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dt_title"
        android:textSize="18sp"/>

    <!-- ダブルの数 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/double_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp"
            android:clickable="true"
            android:onClick="showPicker"/>

    </LinearLayout>

    <!-- トリプルの数 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triple_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/triple_unit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/pick_value_shape"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="0"
            android:textSize="15sp"
            android:clickable="true"
            android:onClick="showPicker"/>

    </LinearLayout>

    <!-- 戻る・次へ -->
    <LinearLayout
        android:id="@+id/next_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/multi_back_for_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="goBack"
            android:text="@string/back_str"/>

        <Button
            android:id="@+id/multi_next_for_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="multiResultTransition"
            android:text="@string/next_str"/>

    </LinearLayout>

</LinearLayout>
