<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFF00"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="raksam.com.totoran.MultiResultActivity">

    <!-- 画面タイトル -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:textColor="@drawable/button_text_color_red"
        android:textSize="30sp"
        android:text="マルチ結果"/>
    <!-- 中抜き文字装飾できねえかな？？？？？？？？？？？？-->

    <!-- 結果表示領域 -->
    <TextView
        android:id="@+id/result_text_view_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="13"
        android:background="@drawable/pick_value_shape"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp" />

    <!-- ボタン群 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <!-- プチ削減ボタン -->
        <Button
            android:id="@+id/multi_puchi_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_nomal"
            android:textColor="@drawable/button_text_color_nomal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="popSakugen"
            android:text="@string/puchi_str"/>

        <!-- 判定ボタン -->
        <Button
            android:id="@+id/multi_hantei_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_nomal"
            android:textColor="@drawable/button_text_color_nomal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="popHantei"
            android:text="@string/hantei_str"/>

        <!-- コピーボタン -->
        <Button
            android:id="@+id/multi_copy_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_nomal"
            android:textColor="@drawable/button_text_color_nomal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="popCopy"
            android:text="@string/copy_str"/>

    </LinearLayout>

    <!-- 戻るボタン -->
    <Button
        android:id="@+id/multi_back_for_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:onClick="goBack"
        android:text="@string/back_str"/>

    <!-- NEND表示用レイアウト -->
    <RelativeLayout
        android:id="@+id/multi_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

    </RelativeLayout>

</LinearLayout>
